--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <meta charset="utf-8">
 <meta name="renderer" content="webkit">
 <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
-<title>脸萌官网 ლ(・ω・ლ)</title>
-<meta content="脸萌,MYO,MYOTee,MYOTee脸萌,MYOTee脸萌官网,faceQ,脸萌手机下载,脸萌是什么,myobe脸萌,脸萌app,myo脸萌,my0脸萌,脸萌魔兽玩家" name="keywords">
+<title> ლ(・ω・ლ)</title>
+<meta content="MYO,MYOTee" name="keywords">
 <meta name="description" content="你的卖萌神器">
 <link rel="icon" href="favicon.ico" type="image/x-icon" />
 <style>
@@ -140,14 +140,14 @@
 		<canvas id="gameCanvas"></canvas>
 	</div>
 	<div id="footDiv">
-		<div id="footContent">© 2014 脸萌科技有限公司 粤ICP备13065114号</div>
+		<div id="footContent"></div>
 	</div>
 
 	<div id="connectDiv">
 		<div id="feedbackDiv">
 			<div id="fcTitle">联系方式:</div>
 			<div id="fcContentDiv">
-				<input id="feedbackContent" type="text" placeholder="   有什么想跟脸萌说的吗？">
+				<input id="feedbackContent" type="text" placeholder="">
 			</div>
 			<div id="fcButton">发 送</div>
 			<div id="fcMail"><div class="orMail">或者邮箱:</div><div class="hrMail">hr@bqtalk.com</div></div>
